[gd_scene load_steps=10 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_21.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://d2lllfojhpcc2" path="res://Art/Level/Level_11/1_floorBg4.png" id="3"]
[ext_resource type="Texture2D" uid="uid://brtgap2hpeaaw" path="res://Art/Level/Level_11/zld.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b4bedlahjatv8" path="res://Art/Level/Level_11/zldfloor.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(5130, 1208)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(43, 1495)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1981.5, 2136.5)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(781.5, 1420)
script = null

[node name="Level_21" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="floor" type="CollisionShape2D" parent="wall" index="1"]
position = Vector2(2025, 940)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1021.5, -225.5)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(2907.25, 95.75)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(647, -191)
shape = SubResource( "4" )
disabled = true
metadata/_edit_lock_ = true

[node name="1FloorBg4" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(722, 340)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="Zld" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(972, 289)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Zldfloor" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(1036, 533)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(1692, 267)
metadata/_edit_lock_ = true
